pcem_private_api += files(
        '../../includes/private/dosbox/cdrom.h',
        '../../includes/private/dosbox/dbopl.h',
        '../../includes/private/dosbox/nukedopl.h',
        '../../includes/private/dosbox/vid_cga_comp.h'
        )

pcem_src += files(
        'cdrom_image.cpp',
        'dbopl.cpp',
        'nukedopl.cpp',
        'vid_cga_comp.c'
        )