pcem_private_api += files(
        '../../includes/private/flash/intel_flash.h',
        '../../includes/private/flash/rom.h',
        '../../includes/private/flash/sst39sf010.h',
        '../../includes/private/flash/tandy_eeprom.h',
        '../../includes/private/flash/tandy_rom.h'
        )

pcem_src += files(
        'intel_flash.c',
        'rom.c',
        'sst39sf010.c',
        'tandy_eeprom.c',
        'tandy_rom.c'
        )