pcem_private_api += files(
        '../../includes/private/floppy/fdc37c665.h',
        '../../includes/private/floppy/fdc37c93x.h',
        '../../includes/private/floppy/fdc.h',
        '../../includes/private/floppy/fdd.h'
        )

pcem_src += files(
        'fdc.c',
        'fdc37c665.c',
        'fdc37c93x.c',
        'fdd.c'
        )