pcem_private_api += files(
        '../../includes/private/hdd/hdd_esdi.h',
        '../../includes/private/hdd/hdd_file.h',
        '../../includes/private/hdd/hdd.h',
        '../../includes/private/hdd/minivhd/cwalk.h',
        '../../includes/private/hdd/minivhd/libxml2_encoding.h',
        '../../includes/private/hdd/minivhd/minivhd_create.h',
        '../../includes/private/hdd/minivhd/minivhd.h',
        '../../includes/private/hdd/minivhd/minivhd_internal.h',
        '../../includes/private/hdd/minivhd/minivhd_io.h',
        '../../includes/private/hdd/minivhd/minivhd_struct_rw.h',
        '../../includes/private/hdd/minivhd/minivhd_util.h'
        )

pcem_src += files(
        'hdd.c',
        'hdd_esdi.c',
        'hdd_file.c'
        )

# MiniVHD
pcem_src += files(
        'minivhd/cwalk.c',
        'minivhd/libxml2_encoding.c',
        'minivhd/minivhd_convert.c',
        'minivhd/minivhd_create.c',
        'minivhd/minivhd_io.c',
        'minivhd/minivhd_manage.c',
        'minivhd/minivhd_struct_rw.c',
        'minivhd/minivhd_util.c'
        )
