pcem_private_api += files(
        '../../includes/private/ide/ide_atapi.h',
        '../../includes/private/ide/ide.h',
        '../../includes/private/ide/ide_sff8038i.h',
        '../../includes/private/ide/xtide.h'
        )

pcem_src += files(
        'ide.c',
        'ide_atapi.c',
        'ide_sff8038i.c',
        'xtide.c'
        )