pcem_private_api += files(
        '../../includes/private/joystick/gameport.h',
        '../../includes/private/joystick/joystick_ch_flightstick_pro.h',
        '../../includes/private/joystick/joystick_standard.h',
        '../../includes/private/joystick/joystick_sw_pad.h',
        '../../includes/private/joystick/joystick_tm_fcs.h'
        )

pcem_src += files(
        'gameport.c',
        'joystick_ch_flightstick_pro.c',
        'joystick_standard.c',
        'joystick_sw_pad.c',
        'joystick_tm_fcs.c'
        )