pcem_private_api += files(
        '../../includes/private/keyboard/keyboard_amstrad.h',
        '../../includes/private/keyboard/keyboard_at.h',
        '../../includes/private/keyboard/keyboard.h',
        '../../includes/private/keyboard/keyboard_olim24.h',
        '../../includes/private/keyboard/keyboard_pcjr.h',
        '../../includes/private/keyboard/keyboard_xt.h'
        )

pcem_src += files(
        'keyboard.c',
        'keyboard_amstrad.c',
        'keyboard_at.c',
        'keyboard_olim24.c',
        'keyboard_pcjr.c',
        'keyboard_xt.c'
        )