pcem_private_api += files(
        '../../includes/private/models/82091aa.h',
        '../../includes/private/models/acc2036.h',
        '../../includes/private/models/acc2168.h',
        '../../includes/private/models/acc3221.h',
        '../../includes/private/models/acer386sx.h',
        '../../includes/private/models/ali1429.h',
        '../../includes/private/models/amstrad.h',
        '../../includes/private/models/cbm_io.h',
        '../../includes/private/models/cmd640.h',
        '../../includes/private/models/compaq.h',
        '../../includes/private/models/cs8230.h',
        '../../includes/private/models/dells200.h',
        '../../includes/private/models/dma.h',
        '../../includes/private/models/headland.h',
        '../../includes/private/models/i430fx.h',
        '../../includes/private/models/i430hx.h',
        '../../includes/private/models/i430lx.h',
        '../../includes/private/models/i430vx.h',
        '../../includes/private/models/i440bx.h',
        '../../includes/private/models/i440fx.h',
        '../../includes/private/models/intel.h',
        '../../includes/private/models/jim.h',
        '../../includes/private/models/laserxt.h',
        '../../includes/private/models/model.h',
        '../../includes/private/models/mvp3.h',
        '../../includes/private/models/neat.h',
        '../../includes/private/models/nmi.h',
        '../../includes/private/models/olivetti_m24.h',
        '../../includes/private/models/opti495.h',
        '../../includes/private/models/pc87306.h',
        '../../includes/private/models/pc87307.h',
        '../../includes/private/models/pic.h',
        '../../includes/private/models/piix.h',
        '../../includes/private/models/piix_pm.h',
        '../../includes/private/models/pit.h',
        '../../includes/private/models/ps1.h',
        '../../includes/private/models/ps2.h',
        '../../includes/private/models/ps2_mca.h',
        '../../includes/private/models/scat.h',
        '../../includes/private/models/serial.h',
        '../../includes/private/models/sio.h',
        '../../includes/private/models/sl82c460.h',
        '../../includes/private/models/superxt.h',
        '../../includes/private/models/t1000.h',
        '../../includes/private/models/t3100e.h',
        '../../includes/private/models/um8669f.h',
        '../../includes/private/models/um8881f.h',
        '../../includes/private/models/vl82c480.h',
        '../../includes/private/models/vt82c586b.h',
        '../../includes/private/models/w83877tf.h',
        '../../includes/private/models/w83977tf.h',
        '../../includes/private/models/wd76c10.h',
        '../../includes/private/models/xi8088.h',
        '../../includes/private/models/zenith.h'
        )

pcem_src += files(
        '82091aa.c',
        'acc2036.c',
        'acc2168.c',
        'acc3221.c',
        'acer386sx.c',
        'ali1429.c',
        'amstrad.c',
        'cbm_io.c',
        'cmd640.c',
        'compaq.c',
        'cs8230.c',
        'dells200.c',
        'dma.c',
        'headland.c',
        'i430fx.c',
        'i430hx.c',
        'i430lx.c',
        'i430vx.c',
        'i440bx.c',
        'i440fx.c',
        'intel.c',
        'jim.c',
        'laserxt.c',
        'model.c',
        'mvp3.c',
        'neat.c',
        'nmi.c',
        'nvr_tc8521.c',
        'olivetti_m24.c',
        'opti495.c',
        'pc87306.c',
        'pc87307.c',
        'pic.c',
        'piix.c',
        'piix_pm.c',
        'pit.c',
        'ps1.c',
        'ps2.c',
        'ps2_mca.c',
        'scamp.c',
        'scat.c',
        'serial.c',
        'sio.c',
        'sl82c460.c',
        'superxt.c',
        't1000.c',
        't3100e.c',
        'um8669f.c',
        'um8881f.c',
        'vl82c480.c',
        'vt82c586b.c',
        'w83877tf.c',
        'w83977tf.c',
        'wd76c10.c',
        'xi8088.c',
        'zenith.c'
        )