pcem_private_api += files(
        '../../includes/private/mouse/mouse.h',
        '../../includes/private/mouse/mouse_msystems.h',
        '../../includes/private/mouse/mouse_ps2.h',
        '../../includes/private/mouse/mouse_serial.h'
        )

pcem_src += files(
        'mouse.c',
        'mouse_msystems.c',
        'mouse_ps2.c',
        'mouse_serial.c'
        )