pcem_private_api += files(
        '../../includes/private/scsi/scsi_53c400.h',
        '../../includes/private/scsi/scsi_aha1540.h',
        '../../includes/private/scsi/scsi_cd.h',
        '../../includes/private/scsi/scsi.h',
        '../../includes/private/scsi/scsi_hd.h',
        '../../includes/private/scsi/scsi_ibm.h',
        '../../includes/private/scsi/scsi_zip.h'
        )

pcem_src += files(
        'scsi.c',
        'scsi_53c400.c',
        'scsi_aha1540.c',
        'scsi_cd.c',
        'scsi_hd.c',
        'scsi_ibm.c',
        'scsi_zip.c'
        )